--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@ body {
     background-color: #FAFAFA;
     font-size: 18px;
 }
-  
+
 nav > ul > li {
-    float: left;
+    display: inline-block;
     padding: 10px;
     list-style: none;
 }
@@ -24,7 +24,6 @@ p{
 }
   
 h1 {
-    clear: both;
     font-size: 2.25em;
     font-family: 'Montserrat', sans-serif; 
     font-weight: bold;                     
