--- a/style.css
+++ b/style.css
@@ -42,6 +42,29 @@ h3 {
     font-size: 1.4em;
     text-transform: uppercase;
 }
+
+a {
+    text-decoration: none;
+    color: #0074c4;
+}
+  
+a:hover {
+    text-decoration: underline;
+    color: #0098ff;
+}
+  
+.principal {
+    float: left;
+    width: 70%;
+    margin-right: 24px;
+}
+  
+.recomendadas,
+  aside {
+    float: left;
+    width: 25%;
+    margin-top: 95px;
+}
   
 .fecha {
     margin-bottom: 30px;
@@ -63,6 +86,7 @@ hr {
     border: .5px solid #808080;
     width: 80%;
     opacity: .3;
+    clear: both;
 }
   
 .copyright {
