--- a/style.css
+++ b/style.css
@@ -15,7 +15,10 @@ nav > ul > li {
     list-style: none;
 }
 
-h1, h2, h3, p {
+h1, 
+h2, 
+h3, 
+p {
     color: #24292e;
 }
 
@@ -29,7 +32,8 @@ h1 {
     font-weight: bold;                     
 }
 
-h2, h3 {
+h2, 
+h3 {
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: bold;
 }
@@ -46,8 +50,8 @@ h3 {
 a {
     text-decoration: none;
     color: #0074c4;
-}
-  
+}    
+
 a:hover {
     text-decoration: underline;
     color: #0098ff;
@@ -60,7 +64,7 @@ a:hover {
 }
   
 .recomendadas,
-  aside {
+aside {
     float: left;
     width: 25%;
     margin-top: 95px;
